--- a/ArcReactor/ArcReactor.csproj
+++ b/ArcReactor/ArcReactor.csproj
@@ -92,7 +92,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\LedColor.cs" />
+    <Compile Include="Models\ColoredLed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ArcReactorService.cs" />
     <Compile Include="Services\BluetoothService.cs" />
